parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prop
Rule 1     prop -> term
Rule 2     prop -> LPAREN AND prop prop RPAREN
Rule 3     prop -> LPAREN OR prop prop RPAREN
Rule 4     prop -> LPAREN NOT prop RPAREN
Rule 5     term -> id
Rule 6     id -> SYMBOL

Terminals, with rules where they appear

AND                  : 2
LPAREN               : 2 3 4
NOT                  : 4
OR                   : 3
RPAREN               : 2 3 4
SYMBOL               : 6
error                : 

Nonterminals, with rules where they appear

id                   : 5
prop                 : 2 2 3 3 4 0
term                 : 1

Parsing method: LALR

state 0

    (0) S' -> . prop
    (1) prop -> . term
    (2) prop -> . LPAREN AND prop prop RPAREN
    (3) prop -> . LPAREN OR prop prop RPAREN
    (4) prop -> . LPAREN NOT prop RPAREN
    (5) term -> . id
    (6) id -> . SYMBOL

    LPAREN          shift and go to state 3
    SYMBOL          shift and go to state 5

    prop                           shift and go to state 1
    term                           shift and go to state 2
    id                             shift and go to state 4

state 1

    (0) S' -> prop .



state 2

    (1) prop -> term .

    $end            reduce using rule 1 (prop -> term .)
    LPAREN          reduce using rule 1 (prop -> term .)
    SYMBOL          reduce using rule 1 (prop -> term .)
    RPAREN          reduce using rule 1 (prop -> term .)


state 3

    (2) prop -> LPAREN . AND prop prop RPAREN
    (3) prop -> LPAREN . OR prop prop RPAREN
    (4) prop -> LPAREN . NOT prop RPAREN

    AND             shift and go to state 6
    OR              shift and go to state 7
    NOT             shift and go to state 8


state 4

    (5) term -> id .

    $end            reduce using rule 5 (term -> id .)
    LPAREN          reduce using rule 5 (term -> id .)
    SYMBOL          reduce using rule 5 (term -> id .)
    RPAREN          reduce using rule 5 (term -> id .)


state 5

    (6) id -> SYMBOL .

    $end            reduce using rule 6 (id -> SYMBOL .)
    LPAREN          reduce using rule 6 (id -> SYMBOL .)
    SYMBOL          reduce using rule 6 (id -> SYMBOL .)
    RPAREN          reduce using rule 6 (id -> SYMBOL .)


state 6

    (2) prop -> LPAREN AND . prop prop RPAREN
    (1) prop -> . term
    (2) prop -> . LPAREN AND prop prop RPAREN
    (3) prop -> . LPAREN OR prop prop RPAREN
    (4) prop -> . LPAREN NOT prop RPAREN
    (5) term -> . id
    (6) id -> . SYMBOL

    LPAREN          shift and go to state 3
    SYMBOL          shift and go to state 5

    prop                           shift and go to state 9
    term                           shift and go to state 2
    id                             shift and go to state 4

state 7

    (3) prop -> LPAREN OR . prop prop RPAREN
    (1) prop -> . term
    (2) prop -> . LPAREN AND prop prop RPAREN
    (3) prop -> . LPAREN OR prop prop RPAREN
    (4) prop -> . LPAREN NOT prop RPAREN
    (5) term -> . id
    (6) id -> . SYMBOL

    LPAREN          shift and go to state 3
    SYMBOL          shift and go to state 5

    prop                           shift and go to state 10
    term                           shift and go to state 2
    id                             shift and go to state 4

state 8

    (4) prop -> LPAREN NOT . prop RPAREN
    (1) prop -> . term
    (2) prop -> . LPAREN AND prop prop RPAREN
    (3) prop -> . LPAREN OR prop prop RPAREN
    (4) prop -> . LPAREN NOT prop RPAREN
    (5) term -> . id
    (6) id -> . SYMBOL

    LPAREN          shift and go to state 3
    SYMBOL          shift and go to state 5

    prop                           shift and go to state 11
    term                           shift and go to state 2
    id                             shift and go to state 4

state 9

    (2) prop -> LPAREN AND prop . prop RPAREN
    (1) prop -> . term
    (2) prop -> . LPAREN AND prop prop RPAREN
    (3) prop -> . LPAREN OR prop prop RPAREN
    (4) prop -> . LPAREN NOT prop RPAREN
    (5) term -> . id
    (6) id -> . SYMBOL

    LPAREN          shift and go to state 3
    SYMBOL          shift and go to state 5

    prop                           shift and go to state 12
    term                           shift and go to state 2
    id                             shift and go to state 4

state 10

    (3) prop -> LPAREN OR prop . prop RPAREN
    (1) prop -> . term
    (2) prop -> . LPAREN AND prop prop RPAREN
    (3) prop -> . LPAREN OR prop prop RPAREN
    (4) prop -> . LPAREN NOT prop RPAREN
    (5) term -> . id
    (6) id -> . SYMBOL

    LPAREN          shift and go to state 3
    SYMBOL          shift and go to state 5

    prop                           shift and go to state 13
    term                           shift and go to state 2
    id                             shift and go to state 4

state 11

    (4) prop -> LPAREN NOT prop . RPAREN

    RPAREN          shift and go to state 14


state 12

    (2) prop -> LPAREN AND prop prop . RPAREN

    RPAREN          shift and go to state 15


state 13

    (3) prop -> LPAREN OR prop prop . RPAREN

    RPAREN          shift and go to state 16


state 14

    (4) prop -> LPAREN NOT prop RPAREN .

    $end            reduce using rule 4 (prop -> LPAREN NOT prop RPAREN .)
    LPAREN          reduce using rule 4 (prop -> LPAREN NOT prop RPAREN .)
    SYMBOL          reduce using rule 4 (prop -> LPAREN NOT prop RPAREN .)
    RPAREN          reduce using rule 4 (prop -> LPAREN NOT prop RPAREN .)


state 15

    (2) prop -> LPAREN AND prop prop RPAREN .

    $end            reduce using rule 2 (prop -> LPAREN AND prop prop RPAREN .)
    LPAREN          reduce using rule 2 (prop -> LPAREN AND prop prop RPAREN .)
    SYMBOL          reduce using rule 2 (prop -> LPAREN AND prop prop RPAREN .)
    RPAREN          reduce using rule 2 (prop -> LPAREN AND prop prop RPAREN .)


state 16

    (3) prop -> LPAREN OR prop prop RPAREN .

    $end            reduce using rule 3 (prop -> LPAREN OR prop prop RPAREN .)
    LPAREN          reduce using rule 3 (prop -> LPAREN OR prop prop RPAREN .)
    SYMBOL          reduce using rule 3 (prop -> LPAREN OR prop prop RPAREN .)
    RPAREN          reduce using rule 3 (prop -> LPAREN OR prop prop RPAREN .)

